# PAN

./: .gitignore  README.md  ansible.cfg  complete_config.yaml  pan_complete.yaml  pyproject.toml  requirements.txt  requirements.yaml
inventory/: hosts.yaml
inventory/group_vars/firewalls/: vars.yaml  vault.yaml
inventory/group_vars/justiceleague/: vars.yaml
inventory/host_vars/fw01.justiceleague.local/: vars.yaml  vault.yaml
roles/nautobot/nautobot_import_interface_and_vlan/defaults/: main.yaml
roles/nautobot/nautobot_import_interface_and_vlan/meta/: main.yaml
roles/nautobot/nautobot_import_interface_and_vlan/tasks/: main.yaml
roles/pan/pan_accounts/defaults/: main.yaml
roles/pan/pan_accounts/meta/: main.yaml
roles/pan/pan_accounts/tasks/: main.yaml
roles/pan/pan_address_groups/defaults/: main.yaml
roles/pan/pan_address_groups/meta/: main.yaml
roles/pan/pan_address_groups/tasks/: main.yaml
roles/pan/pan_address_objects/defaults/: main.yaml
roles/pan/pan_address_objects/tasks/: main.yaml
roles/pan/pan_admin_roles/defaults/: main.yaml
roles/pan/pan_admin_roles/tasks/: main.yaml
roles/pan/pan_api_key/defaults/: main.yaml
roles/pan/pan_api_key/tasks/: main.yaml
roles/pan/pan_backup_configuration/default/: main.yaml
roles/pan/pan_backup_configuration/tasks/: main.yaml
roles/pan/pan_certificates/tasks/: main.yaml
roles/pan/pan_custom_url_category/defaults/: main.yaml
roles/pan/pan_custom_url_category/tasks/: main.yaml
roles/pan/pan_device/defaults/: main.yaml
roles/pan/pan_facts/tasks/: main.yaml
roles/pan/pan_ike/defaults/: main.yaml
roles/pan/pan_ike/tasks/: main.yaml
roles/pan/pan_interfaces/defaults/: main.yaml
roles/pan_accounts/defaults/: main.yaml
roles/pan_address_groups/defaults/: main.yaml
roles/pan_address_objects/defaults/: main.yaml
roles/pan_admin_roles/defaults/: main.yaml
roles/pan_certificates/tasks/: main.yaml
roles/pan_facts/tasks/: main.yaml
roles/pan_interfaces/defaults/: main.yaml
roles/pan_interfaces/meta/: main.yaml
roles/pan_interfaces/tasks/: main.yaml
roles/pan_log_forwarding_profile/defaults/: main.yaml
roles/pan_log_forwarding_profile/tasks/: main.yaml
roles/pan_management_profiles/tasks/: main.yaml
roles/pan_nat_destination/tasks/: main.yaml
roles/pan_nat_source/tasks/: main.yaml
roles/pan_security_profiles/defaults/: main.yaml
roles/pan_security_profiles/tasks/: main.yaml
roles/pan_services/defaults/: main.yaml
roles/pan_services/tasks/: main.yaml
roles/pan_static_routes/defaults/: main.yaml
roles/pan_static_routes/tasks/: main.yaml
roles/pan_tags/tasks/: main.yaml
roles/pan_zones/defaults/: main.yaml
roles/pan_zones/tasks/: main.yaml
(+51 files in other folders)
