[tool.poetry]
name = "Ansible PANW IaC"
version = "1.3"
description = "Collection of Ansible roles for Palo Alto Networks firewalls"
authors = ["Bjorn-Vegar Borge <bjorn-vegar@netsecurity.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "~2.15"
ansible-lint = {version = "~6", markers = "platform_system != 'Windows'"}
ansible-pylibssh = "~1.1"
jmespath = "~1.0"
jsondiff = "~2.0"
junos-eznc = "~2.6"
napalm = "~4.1"
napalm-ansible = "~1.1"
ncclient = "~0.6"
pan-os-python = "~1.11"
pan-python = "~0.17"
pandevice = "~0.14"
packaging = "~23.1"
paramiko = "~3.3"
pyaoscx = "~2.5"
pynautobot = "~1.5"
requests = "~2.31"
requests_toolbelt = "~1.0"
xmltodict = "~0.13"
dnspython = "~2.4"
ansible-compat = "~4"
ansible-navigator = "~3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
