[tool.poetry]
name = "Ansible PANW IaC"
version = "1.5"
description = "Collection of Ansible roles for Palo Alto Networks firewalls"
authors = ["Bjorn-Vegar Borge <bvborge@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "~2.18"
ansible-lint = {version = "~24", markers = "platform_system != 'Windows'"}
ansible-pylibssh = "~1"
ansible-compat = "~4"
ansible-navigator = "~3"
jmespath = "~1"
jsondiff = "~2"
junos-eznc = "~2"
napalm = "~5"
napalm-ansible = "~1"
ncclient = "~0"
pan-os-python = "~1.12"
pan-python = "~0.17"
pandevice = "~0.14"
packaging = "~23.2"
paramiko = "~3"
pyaoscx = "~2"
pynautobot = "~2"
requests = "~2"
requests_toolbelt = "~1"
xmltodict = "~0"
dnspython = "~2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
